--- a/pom.xml
+++ b/pom.xml
@@ -165,6 +165,13 @@
       <artifactId>commons-lang3</artifactId>
       <version>3.5</version>
     </dependency>
+
+    <!-- 发送邮件使用 -->
+    <dependency>
+      <groupId>org.apache.commons</groupId>
+      <artifactId>commons-email</artifactId>
+      <version>1.4</version>
+    </dependency>
   </dependencies>
 
   <build>
