--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -48,6 +48,17 @@
     <url-pattern>/*</url-pattern>
   </filter-mapping>
 
+  <!-- 登录过滤器 -->
+  <filter>
+    <filter-name>loginFilter</filter-name>
+    <filter-class>com.lakeqiu.filter.LoginFilter</filter-class>
+  </filter>
+  <filter-mapping>
+    <filter-name>loginFilter</filter-name>
+    <url-pattern>/sys/*</url-pattern>
+    <url-pattern>/admin/*</url-pattern>
+  </filter-mapping>
+
   <!-- druid -->
   <servlet>
     <servlet-name>DruidStatServlet</servlet-name>
