--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -94,6 +94,6 @@
 
   <!-- 默认访问页面 -->
   <welcome-file-list>
-    <welcome-file>index.jsp</welcome-file>
+    <welcome-file>signin.jsp</welcome-file>
   </welcome-file-list>
 </web-app>
