--- a/pom.xml
+++ b/pom.xml
@@ -172,6 +172,13 @@
       <artifactId>commons-email</artifactId>
       <version>1.4</version>
     </dependency>
+
+    <dependency>
+      <groupId>redis.clients</groupId>
+      <artifactId>jedis</artifactId>
+      <version>2.8.1</version>
+      <type>jar</type>
+    </dependency>
   </dependencies>
 
   <build>
