--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -48,6 +48,20 @@
     <url-pattern>/*</url-pattern>
   </filter-mapping>
 
+  <filter>
+    <filter-name>DruidWebStatFilter</filter-name>
+    <filter-class>com.alibaba.druid.support.http.WebStatFilter</filter-class>
+    <init-param>
+      <!-- 不拦截 -->
+      <param-name>exclusions</param-name>
+      <param-value>*.js,*.css,*.jpg,*.png,*.ico,*.gif,/sys/druid/*</param-value>
+    </init-param>
+  </filter>
+  <filter-mapping>
+    <filter-name>DruidWebStatFilter</filter-name>
+    <url-pattern>/*</url-pattern>
+  </filter-mapping>
+
   <!-- 登录过滤器 -->
   <filter>
     <filter-name>loginFilter</filter-name>
@@ -55,6 +69,25 @@
   </filter>
   <filter-mapping>
     <filter-name>loginFilter</filter-name>
+    <url-pattern>/sys/*</url-pattern>
+    <url-pattern>/admin/*</url-pattern>
+  </filter-mapping>
+
+  <!-- 权限拦截器 -->
+  <filter>
+    <filter-name>aclControlFilter</filter-name>
+    <filter-class>com.lakeqiu.filter.AclControlFilter</filter-class>
+    <init-param>
+      <param-name>targetFilterLifecycle</param-name>
+      <param-value>true</param-value>
+    </init-param>
+    <init-param>
+      <param-name>exclusionUrls</param-name>
+      <param-value>/sys/user/noAuth.page,/login.page</param-value>
+    </init-param>
+  </filter>
+  <filter-mapping>
+    <filter-name>aclControlFilter</filter-name>
     <url-pattern>/sys/*</url-pattern>
     <url-pattern>/admin/*</url-pattern>
   </filter-mapping>
@@ -78,19 +111,7 @@
     <!-- 加sys的话，如果想对druid也进行权限拦截的话比较方便 -->
     <url-pattern>/sys/druid/*</url-pattern>
   </servlet-mapping>
-  <filter>
-    <filter-name>DruidWebStatFilter</filter-name>
-    <filter-class>com.alibaba.druid.support.http.WebStatFilter</filter-class>
-    <init-param>
-      <!-- 不拦截 -->
-       <param-name>exclusions</param-name>
-      <param-value>*.js,*.css,*.jpg,*.png,*.ico,*.gif,/sys/druid/*</param-value>
-    </init-param>
-  </filter>
-  <filter-mapping>
-    <filter-name>DruidWebStatFilter</filter-name>
-    <url-pattern>/*</url-pattern>
-  </filter-mapping>
+
 
   <!-- 默认访问页面 -->
   <welcome-file-list>
